# power-simulator

./: .gitignore  agents.db
.github/workflows/: backend.yml
agent_platform/: main.py
agent_platform/database/: session.py
agent_platform/memory/: models.py  router.py  service.py
agent_platform/prompts/: models.py  router.py  service.py
agent_platform/registry/: models.py  router.py  service.py
agent_platform/tasks/: models.py  router.py  service.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4cd49211d786_create_lmp_prices.py
backend/app/: main.py
backend/app/core/: config.py  test_redis.py
backend/app/db/: session.py
backend/app/market/models/: lmp_price.py
backend/tests/: test_health.py
docs/roadmap/: 00-master-roadmap.md  01-stage-0-foundation-ai-platform.md  02-stage-0b-agent-bus.md  03-stage-1-infrastructure-foundation.md  04-stage-2-network-modeling.md
infrastructure/: docker-compose.yml
scripts/: validate_redis.py
